2009-07-02  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/HP-DesignJet_120.xml, driver/cdnj500.xml,
	  driver/chp2200.xml, opt/2.xml, opt/largeformat-PageSize.xml:
	  Added HP DesignJet 120.

	* printer/HP-DesignJet_30.xml, printer/HP-DesignJet_70.xml,
	  printer/HP-DesignJet_90.xm, printer/HP-DesignJet_100.xml,
	  printer/HP-DesignJet_100plus.xml, printer/HP-DesignJet_110.xml,
	  printer/HP-DesignJet_130.xml, printer/HP-DesignJet_500.xml,
	  printer/HP-DesignJet_800.xml, printer/HP-DesignJet_5000.xml,
	  printer/HP-DesignJet_5500.xml: Added information about
	  unprintable margins.

	* printer/HP-DesignJet_100.xml, printer/HP-DesignJet_100plus.xml,
	  printer/HP-DesignJet_5000.xml, printer/HP-DesignJet_5500.xml:
	  Added to the list of printers supported by the "cdnj500" driver.

2009-07-01  Till Kamppeter <till.kamppeter@gmail.com>

	* opt/pjl-HP-DesignJet-InputSlot.xml: Allow paper input selection
	  (auto select, tray, manual feed, rear path, roll with and
	  without cut) with the "cdnj500" driver.

	* driver/cdnj500.xml: Also the HP DesignJet 30, 70, 90, 110, and
	  130 work with this driver.

	* printer/HP-DesignJet_110.xml, printer/HP-DesignJet_130.xml,
	  printer/HP-DesignJet_30.xml, printer/HP-DesignJet_70.xml,
	  printer/HP-DesignJet_90.xml: Make "cdnj500" the recommended
	  driver. It supports custom page sizes and paper input selection.

2009-06-17  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/Postscript-InfoPrint.xml, driver/pxlcolor-InfoPrint.xml,
	  driver/pxlmono-InfoPrint.xml: Driver XML entries for Ricoh's new
	  InfoPrint brand.

2009-06-16  Bin Li <bin.li@ricoh-tech.com>

	* PPD/, printer/: Added 51 Postscript and 51 pxlmono PPD files for 51 Ricoh Family Group models.

2009-06-16  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/Brother-DCP-7020.xml: New printer entry
	  (Ubuntu bug #258058).

	* printer/Brother-MFC-8600.xml: New printer entry
	  (Ubuntu bug #273975).

	* printer/Brother-MFC-8300.xml: Text updates.
