@@ -17,7 +17,7 @@
   <constraints>
      <constraint sense="true">
       <driver>Postscript</driver>
-      <arg_defval>ev/Postscript-DefaultResolution</arg_defval>
+      <arg_defval>ev/Postscript-600</arg_defval>
      </constraint>
      <constraint sense="true">
       <make>HP</make>
@@ -223,19 +223,6 @@
      </constraint>
   </constraints>
   <enum_vals>
-   <enum_val id="ev/Postscript-DefaultResolution">
-    <ev_longname>
-     <en>Printer Default</en>
-    </ev_longname>
-    <!-- A multilingual <comments> block can appear here, too;
-         it should be treated as documentation for the user. -->
-    <ev_shortname>
-     <en>default</en>
-     <!-- Until someone tells me how to learn the user locale in 
-          backends, the shortname must be monolingual in <en>! -->
-    </ev_shortname>
-    <ev_driverval></ev_driverval>
-   </enum_val>
    <enum_val id="ev/Postscript-600">
     <ev_longname>
      <en>600 DPI</en>
