@@ -1,3 +1,9 @@
+2009-07-07  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* opt/Postscript-Resolution.xml: Fixed Resolution option fir the
+	  Postscript driver. Removed the "default" choice, as it does not
+	  comply with Adobe's PPD specs.
+
 2009-07-02  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* printer/HP-DesignJet_120.xml, driver/cdnj500.xml,
